--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "react-scripts": "1.0.17"
   },
   "dependencies": {
+    "async": "^2.6.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "history": "^4.7.2",
+    "mongoose": "^4.13.1",
+    "morgan": "^1.9.0",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0"
+    "react-dom": "^16.1.0",
+    "react-router": "^4.2.0",
+    "request": "^2.83.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,5 +23,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy":"http://localhost:3000"
+  "proxy": "http://localhost:3000"
 }
