--- a/package.json
+++ b/package.json
@@ -15,5 +15,54 @@
   "bugs": {
     "url": "https://github.com/thomcchester/shoppingRecipe/issues"
   },
-  "homepage": "https://github.com/thomcchester/shoppingRecipe#readme"
+  "homepage": "https://github.com/thomcchester/shoppingRecipe#readme",
+  "dependencies": {
+    "alt": "^0.18.6",
+    "async": "^2.6.0",
+    "babel-core": "^6.26.0",
+    "babel-register": "^6.26.0",
+    "body-parser": "^1.18.2",
+    "colors": "^1.1.2",
+    "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "gulp": "^3.9.1",
+    "history": "^4.7.2",
+    "jwt-decode": "^2.2.0",
+    "mongoose": "^4.13.1",
+    "nodemon": "^1.12.1",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
+    "react-router": "^4.2.0",
+    "request": "^2.83.0",
+    "serve-favicon": "^2.4.5",
+    "superagent": "^3.8.1",
+    "swig": "^1.4.2",
+    "underscore": "^1.8.3",
+    "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babelify": "^8.0.0",
+    "bower": "^1.8.2",
+    "browserify": "^14.5.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-if": "^2.0.2",
+    "gulp-image": "^4.1.0",
+    "gulp-less": "^3.3.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
+  }
 }
