added server that is not currently connected to any mongodb

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "For shopping based off recipe purposes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "watch": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "mongoose": "^4.13.1",
+    "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
