--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "start": "node server/server.js",
     "watch": "nodemon server/server.js"
   },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/thomcchester/shoppingRecipe.git"
@@ -18,53 +24,79 @@
   },
   "homepage": "https://github.com/thomcchester/shoppingRecipe#readme",
   "dependencies": {
-    "alt": "^0.18.6",
-    "async": "^2.6.0",
-    "babel-core": "^6.26.0",
-    "babel-register": "^6.26.0",
-    "body-parser": "^1.18.2",
+    "alt": "^0.17.8",
+    "async": "^1.5.0",
+    "auth0-lock": "^10.10.2",
+    "babel-register": "^6.22.0",
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.14.1",
     "colors": "^1.1.2",
-    "compression": "^1.7.1",
+    "compression": "^1.6.0",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
-    "express": "^4.16.2",
-    "express-session": "^1.15.6",
+    "express": "^4.13.3",
+    "express-session": "^1.15.0",
     "gulp": "^3.9.1",
-    "history": "^4.7.2",
-    "jwt-decode": "^2.2.0",
-    "mongoose": "^4.13.1",
-    "morgan": "^1.9.0",
-    "nodemon": "^1.12.1",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "react-router": "^4.2.0",
-    "request": "^2.83.0",
-    "serve-favicon": "^2.4.5",
-    "superagent": "^3.8.1",
+    "history": "^1.13.0",
+    "jwt-decode": "^2.1.0",
+    "mongoose": "^4.2.5",
+    "morgan": "^1.6.1",
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-router": "^1.0.0",
+    "request": "^2.65.0",
+    "serve-favicon": "^2.3.0",
+    "superagent": "^3.3.2",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.19"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babelify": "^8.0.0",
-    "bower": "^1.8.2",
-    "browserify": "^14.5.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-if": "^2.0.2",
-    "gulp-image": "^4.1.0",
-    "gulp-less": "^3.3.2",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
+    "xml2js": "^0.4.15",
+    "babel-core": "^6.1.19",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-register": "^6.22.0",
+    "babelify": "^7.2.0",
+    "bower": "^1.6.5",
+    "browserify": "^12.0.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-if": "^2.0.0",
+    "gulp-image": "^2.7.5",
+    "gulp-less": "^3.0.3",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0"
+    "watchify": "^3.6.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.1.19",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-register": "^6.22.0",
+    "babelify": "^7.2.0",
+    "bower": "^1.6.5",
+    "browserify": "^12.0.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-if": "^2.0.0",
+    "gulp-image": "^2.7.5",
+    "gulp-less": "^3.0.3",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.0"
   }
 }
