--- a/package.json
+++ b/package.json
@@ -27,16 +27,32 @@
     "alt": "^0.17.8",
     "async": "^1.5.0",
     "auth0-lock": "^10.10.2",
+    "babel-core": "^6.1.19",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "babel-register": "^6.22.0",
+    "babelify": "^7.2.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.14.1",
+    "bower": "^1.6.5",
+    "browserify": "^12.0.1",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.3",
     "express-session": "^1.15.0",
-    "gulp": "^3.9.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-if": "^2.0.0",
+    "gulp-image": "^2.7.5",
+    "gulp-less": "^3.0.3",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
     "history": "^1.13.0",
     "jwt-decode": "^2.1.0",
     "mongoose": "^4.2.5",
@@ -53,28 +69,10 @@
     "superagent": "^3.3.2",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.15",
-    "babel-core": "^6.1.19",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-register": "^6.22.0",
-    "babelify": "^7.2.0",
-    "bower": "^1.6.5",
-    "browserify": "^12.0.1",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-if": "^2.0.0",
-    "gulp-image": "^2.7.5",
-    "gulp-less": "^3.0.3",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.4.2",
-    "gulp-util": "^3.0.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.0"
+    "watchify": "^3.6.0",
+    "xml2js": "^0.4.15"
   },
   "devDependencies": {
     "babel-core": "^6.1.19",
