this adds new value

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "TommysPersonal",
+  "name": "shoppingrecipe",
   "dependencies": {
     "jquery": "^2.1.4",
     "bootstrap": "^3.3.5",
